写了两个标题

--- a/index.html
+++ b/index.html
@@ -1624,8 +1624,8 @@
                     <dd></dd>
                     <dd></dd>
                 </div>
-                <div class="price"></div>
-                <div class="price_cars"></div>
+                <div class="price">价格</div>
+                <div class="price_cars">车系</div>
             </div>
             <div class="bottom">
                 <a href="#">点击进入二手车之家，查看更多车源 >></a>
