删除了一个img标签

--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
             <div class="center">
                 <div class="logo">
                     <dl>品牌</dl>
-                    <dd><a href="#"><img src="img/logo/1.jpg" alt=""></a></dd>
+                    <dd><a href="#"></a></dd>
                     <dd></dd>
                     <dd></dd>
                     <dd></dd>
