只剩下footer部分

--- a/index.html
+++ b/index.html
@@ -486,19 +486,25 @@
                             <li class="fl">
                                 <p>宝马X5</p>
                                 <p>2014款&nbsp;xDrive35i尊</p>
-                                <p>14L/<small>100km</small></p>
+                                <p>14L/
+                                    <small>100km</small>
+                                </p>
                                 <p>（23）平均油耗</p>
                             </li>
                             <li class="fl">
                                 <p>宝马X5</p>
                                 <p>2014款&nbsp;xDrive35i尊</p>
-                                <p>14L/<small>100km</small></p>
+                                <p>14L/
+                                    <small>100km</small>
+                                </p>
                                 <p>（23）平均油耗</p>
                             </li>
                             <li class="fl">
                                 <p>宝马X5</p>
                                 <p>2014款&nbsp;xDrive35i尊</p>
-                                <p>14L/<small>100km</small></p>
+                                <p>14L/
+                                    <small>100km</small>
+                                </p>
                                 <p>（23）平均油耗</p>
                             </li>
                         </ul>
@@ -666,7 +672,7 @@
                     </li>
                     <li>
                         <a href="">途锐黄山驭奇之旅 </a>
-                        <a href="">全新一代  </a>
+                        <a href="">全新一代 </a>
                         <a href="">奥迪A4L</a>
                         <a href="">锋范长测配置实用</a>
                     </li>
@@ -726,7 +732,7 @@
                     </li>
                     <li>
                         <a href="">途锐黄山驭奇之旅 </a>
-                        <a href="">全新一代  </a>
+                        <a href="">全新一代 </a>
                         <a href="">奥迪A4L</a>
                         <a href="">锋范长测配置实用</a>
                     </li>
@@ -879,7 +885,7 @@
                         <div class="fl"><a href="#">中华V5让利高达1000元</a></div>
                         <div class="fl"><a href="#">EU系列到店欢迎莅临赏鉴</a></div>
                     </li>
-                </ul>  
+                </ul>
             </div>
             <div class="new_c-title_10">直击视网膜 汽车之家 图片精选</div>
         </div>
@@ -978,11 +984,21 @@
     <div class="car-video_b clearfix">
         <span class="fl"></span>
         <ul class="fl clearfix">
-            <li class="fl"><div></div></li>
-            <li class="fl"><div></div></li>
-            <li class="fl"><div></div></li>
-            <li class="fl"><div></div></li>
-            <li class="fl"><div></div></li>
+            <li class="fl">
+                <div></div>
+            </li>
+            <li class="fl">
+                <div></div>
+            </li>
+            <li class="fl">
+                <div></div>
+            </li>
+            <li class="fl">
+                <div></div>
+            </li>
+            <li class="fl">
+                <div></div>
+            </li>
         </ul>
         <span class="fl"></span>
     </div>
@@ -1077,37 +1093,29 @@
                     </div>
                 </li>
                 <li class="clearfix">
-                <div class="center_consult-l_img fl"></div>
-                <div class="center_consult-l_explain fl">
-                    <p>当摇滚遇上汽车 独家专访左右乐队</p>
-                    <span>2016-10-14 08:21:56</span>
-                    <p>[二手车之家 选车导购] 左右乐队是中国Nu-Metal音乐中的一支新生力量，风格绝对硬朗，现场感受绝对震撼，大壮我非常喜欢。 乐队成立于2005年9月。所有乐手均</p>
-                </div>
-            </li>
+                    <div class="center_consult-l_img fl"></div>
+                    <div class="center_consult-l_explain fl">
+                        <p>当摇滚遇上汽车 独家专访左右乐队</p>
+                        <span>2016-10-14 08:21:56</span>
+                        <p>[二手车之家 选车导购] 左右乐队是中国Nu-Metal音乐中的一支新生力量，风格绝对硬朗，现场感受绝对震撼，大壮我非常喜欢。 乐队成立于2005年9月。所有乐手均</p>
+                    </div>
+                </li>
                 <li class="clearfix">
-                <div class="center_consult-l_img fl"></div>
-                <div class="center_consult-l_explain fl">
-                    <p>当摇滚遇上汽车 独家专访左右乐队</p>
-                    <span>2016-10-14 08:21:56</span>
-                    <p>[二手车之家 选车导购] 左右乐队是中国Nu-Metal音乐中的一支新生力量，风格绝对硬朗，现场感受绝对震撼，大壮我非常喜欢。 乐队成立于2005年9月。所有乐手均</p>
-                </div>
-            </li>
+                    <div class="center_consult-l_img fl"></div>
+                    <div class="center_consult-l_explain fl">
+                        <p>当摇滚遇上汽车 独家专访左右乐队</p>
+                        <span>2016-10-14 08:21:56</span>
+                        <p>[二手车之家 选车导购] 左右乐队是中国Nu-Metal音乐中的一支新生力量，风格绝对硬朗，现场感受绝对震撼，大壮我非常喜欢。 乐队成立于2005年9月。所有乐手均</p>
+                    </div>
+                </li>
                 <li class="clearfix">
-                <div class="center_consult-l_img fl"></div>
-                <div class="center_consult-l_explain fl">
-                    <p>当摇滚遇上汽车 独家专访左右乐队</p>
-                    <span>2016-10-14 08:21:56</span>
-                    <p>[二手车之家 选车导购] 左右乐队是中国Nu-Metal音乐中的一支新生力量，风格绝对硬朗，现场感受绝对震撼，大壮我非常喜欢。 乐队成立于2005年9月。所有乐手均</p>
-                </div>
-            </li>
-                <li class="clearfix">
-                <div class="center_consult-l_img fl"></div>
-                <div class="center_consult-l_explain fl">
-                    <p>当摇滚遇上汽车 独家专访左右乐队</p>
-                    <span>2016-10-14 08:21:56</span>
-                    <p>[二手车之家 选车导购] 左右乐队是中国Nu-Metal音乐中的一支新生力量，风格绝对硬朗，现场感受绝对震撼，大壮我非常喜欢。 乐队成立于2005年9月。所有乐手均</p>
-                </div>
-            </li>
+                    <div class="center_consult-l_img fl"></div>
+                    <div class="center_consult-l_explain fl">
+                        <p>当摇滚遇上汽车 独家专访左右乐队</p>
+                        <span>2016-10-14 08:21:56</span>
+                        <p>[二手车之家 选车导购] 左右乐队是中国Nu-Metal音乐中的一支新生力量，风格绝对硬朗，现场感受绝对震撼，大壮我非常喜欢。 乐队成立于2005年9月。所有乐手均</p>
+                    </div>
+                </li>
                 <li class="clearfix">
                     <div class="center_consult-l_img fl"></div>
                     <div class="center_consult-l_explain fl">
@@ -1132,7 +1140,14 @@
                         <p>[二手车之家 选车导购] 左右乐队是中国Nu-Metal音乐中的一支新生力量，风格绝对硬朗，现场感受绝对震撼，大壮我非常喜欢。 乐队成立于2005年9月。所有乐手均</p>
                     </div>
                 </li>
-
+                <li class="clearfix">
+                    <div class="center_consult-l_img fl"></div>
+                    <div class="center_consult-l_explain fl">
+                        <p>当摇滚遇上汽车 独家专访左右乐队</p>
+                        <span>2016-10-14 08:21:56</span>
+                        <p>[二手车之家 选车导购] 左右乐队是中国Nu-Metal音乐中的一支新生力量，风格绝对硬朗，现场感受绝对震撼，大壮我非常喜欢。 乐队成立于2005年9月。所有乐手均</p>
+                    </div>
+                </li>
 
 
             </ul>
@@ -1188,7 +1203,7 @@
         <div class="buy_car-b1 fl"><a href="#"></a></div>
         <div class="buy_car-b2 fl">
             <dl>
-                <dt class="clearfix"><span class="fl" style="font-weight: 600;color: #3B5998" >促销信息</span><span
+                <dt class="clearfix"><span class="fl" style="font-weight: 600;color: #3B5998">促销信息</span><span
                         class="fr">更多&gt;&gt;</span></dt>
                 <dd>奥迪A1限时优惠 店内让利达4.7万元</dd>
                 <dd>购雷克萨斯RX暂无优惠 欢迎莅临赏鉴</dd>
@@ -1230,7 +1245,9 @@
 <!--S-北京车市-->
 <div class="market">
     <div class="market-title clearfix">
-        <h2>北京车市<small>[切换城市]</small></h2>
+        <h2>北京车市
+            <small>[切换城市]</small>
+        </h2>
         <dl class="fl clearfix">
             <dt class="fl">为您推荐</dt>
             <dd class="fl">SUV</dd>
@@ -1246,9 +1263,53 @@
         <div class="market-list1 fl">
             <dl>
                 <dt class="clearfix">
-                    <div class="market-text01 fl">车系</div>
-                    <div class="market-text02 fl">降幅</div>
-                    <div class="market-text03 fl">优惠价</div>
+                <div class="market-text01 fl">车系</div>
+                <div class="market-text02 fl">降幅</div>
+                <div class="market-text03 fl">优惠价</div>
+                </dt>
+                <dd class="clearfix">
+                    <div class="market-text01 fl"><a href="">欧尚</a></div>
+                    <div class="market-text02 fl"><a href="">1.10万</a></div>
+                    <div class="market-text03 fl"><a href="">4.89万</a></div>
+                </dd>
+                <dd class="clearfix">
+                    <div class="market-text01 fl"><a href="">欧尚</a></div>
+                    <div class="market-text02 fl"><a href="">1.10万</a></div>
+                    <div class="market-text03 fl"><a href="">4.89万</a></div>
+                </dd>
+                <dd class="clearfix">
+                    <div class="market-text01 fl"><a href="">欧尚</a></div>
+                    <div class="market-text02 fl"><a href="">1.10万</a></div>
+                    <div class="market-text03 fl"><a href="">4.89万</a></div>
+                </dd>
+                <dd class="clearfix">
+                    <div class="market-text01 fl"><a href="">欧尚</a></div>
+                    <div class="market-text02 fl"><a href="">1.10万</a></div>
+                    <div class="market-text03 fl"><a href="">4.89万</a></div>
+                </dd>
+                <dd class="clearfix">
+                    <div class="market-text01 fl"><a href="">欧尚</a></div>
+                    <div class="market-text02 fl"><a href="">1.10万</a></div>
+                    <div class="market-text03 fl"><a href="">4.89万</a></div>
+                </dd>
+                <dd class="clearfix">
+                    <div class="market-text01 fl"><a href="">欧尚</a></div>
+                    <div class="market-text02 fl"><a href="">1.10万</a></div>
+                    <div class="market-text03 fl"><a href="">4.89万</a></div>
+                </dd>
+                <dd class="clearfix">
+                    <div class="market-text01 fl"><a href="">欧尚</a></div>
+                    <div class="market-text02 fl"><a href="">1.10万</a></div>
+                    <div class="market-text03 fl"><a href="">4.89万</a></div>
+                </dd>
+            </dl>
+        </div>
+        <div class="market-list1 fl">
+            <dl>
+                <dt class="clearfix">
+                <div class="market-text01 fl">车系</div>
+                <div class="market-text02 fl">降幅</div>
+                <div class="market-text03 fl">优惠价</div>
                 </dt>
                 <dd class="clearfix">
                     <div class="market-text01 fl"><a href="">欧尚</a></div>
@@ -1375,50 +1436,6 @@
                 </dd>
             </dl>
         </div>
-        <div class="market-list1 fl">
-        <dl>
-            <dt class="clearfix">
-            <div class="market-text01 fl">车系</div>
-            <div class="market-text02 fl">降幅</div>
-            <div class="market-text03 fl">优惠价</div>
-            </dt>
-            <dd class="clearfix">
-                <div class="market-text01 fl"><a href="">欧尚</a></div>
-                <div class="market-text02 fl"><a href="">1.10万</a></div>
-                <div class="market-text03 fl"><a href="">4.89万</a></div>
-            </dd>
-            <dd class="clearfix">
-                <div class="market-text01 fl"><a href="">欧尚</a></div>
-                <div class="market-text02 fl"><a href="">1.10万</a></div>
-                <div class="market-text03 fl"><a href="">4.89万</a></div>
-            </dd>
-            <dd class="clearfix">
-                <div class="market-text01 fl"><a href="">欧尚</a></div>
-                <div class="market-text02 fl"><a href="">1.10万</a></div>
-                <div class="market-text03 fl"><a href="">4.89万</a></div>
-            </dd>
-            <dd class="clearfix">
-                <div class="market-text01 fl"><a href="">欧尚</a></div>
-                <div class="market-text02 fl"><a href="">1.10万</a></div>
-                <div class="market-text03 fl"><a href="">4.89万</a></div>
-            </dd>
-            <dd class="clearfix">
-                <div class="market-text01 fl"><a href="">欧尚</a></div>
-                <div class="market-text02 fl"><a href="">1.10万</a></div>
-                <div class="market-text03 fl"><a href="">4.89万</a></div>
-            </dd>
-            <dd class="clearfix">
-                <div class="market-text01 fl"><a href="">欧尚</a></div>
-                <div class="market-text02 fl"><a href="">1.10万</a></div>
-                <div class="market-text03 fl"><a href="">4.89万</a></div>
-            </dd>
-            <dd class="clearfix">
-                <div class="market-text01 fl"><a href="">欧尚</a></div>
-                <div class="market-text02 fl"><a href="">1.10万</a></div>
-                <div class="market-text03 fl"><a href="">4.89万</a></div>
-            </dd>
-        </dl>
-    </div>
 
     </div>
 </div>
@@ -1551,15 +1568,15 @@
                     <p>福特Mustang特价32.8万</p>
                 </li>
                 <li class="fl">
-                <img src="img/sellcar2.jpg" alt="">
-                <p>特卖价¥32.8万</p>
-                <p>福特Mustang特价32.8万</p>
-            </li>
+                    <img src="img/sellcar2.jpg" alt="">
+                    <p>特卖价¥32.8万</p>
+                    <p>福特Mustang特价32.8万</p>
+                </li>
                 <li class="fl">
-                <img src="img/sellcar2.jpg" alt="">
-                <p>特卖价¥32.8万</p>
-                <p>福特Mustang特价32.8万</p>
-            </li>
+                    <img src="img/sellcar2.jpg" alt="">
+                    <p>特卖价¥32.8万</p>
+                    <p>福特Mustang特价32.8万</p>
+                </li>
 
 
             </ul>
@@ -1609,32 +1626,119 @@
                 <a href="#" class="fr">我要卖车</a>
             </div>
             <div class="center">
-                <div class="logo">
-                    <dl>品牌</dl>
-                    <dd><a href="#"></a></dd>
-                    <dd></dd>
-                    <dd></dd>
-                    <dd></dd>
-                    <dd></dd>
-                    <dd></dd>
-                    <dd></dd>
-                    <dd></dd>
-                    <dd></dd>
-                    <dd></dd>
-                    <dd></dd>
-                    <dd></dd>
+                <div class="logo clearfix">
+                    <dl>
+                        <dt>品牌</dt>
+                        <dd class="fl"><a href="#"><img src="img/logo/1.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/2.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/3.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/4.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/5.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/6.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/7.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/8.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/9.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/10.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/11.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                        <dd class="fl"><a href="#"><img src="img/logo/12.jpg" alt="汽车之家">
+                            <p>大众</p></a></dd>
+                    </dl>
                 </div>
-                <div class="price">价格</div>
-                <div class="price_cars">车系</div>
+                <div class="price">
+                    <dl class="clearfix">
+                        <dt>价格：</dt>
+                        <dd class="fl">3万以下|</dd>
+                        <dd class="fl">3-5万|</dd>
+                        <dd class="fl">5-8万|</dd>
+                        <dd class="fl">8-10万|</dd>
+                        <dd class="fl">10-15万</dd>
+                        <dd class="fl">15-20万|</dd>
+                        <dd class="fl">20-30万|</dd>
+                        <dd class="fl">30-50万|</dd>
+                        <dd class="fl">50-70万|</dd>
+                        <dd class="fl">70万以上</dd>
+                    </dl>
+                </div>
+                <div class="price_cars">
+                    <dl class="clearfix">
+                        <dt>价格：</dt>
+                        <dd class="fl">奥迪A6L|</dd>
+                        <dd class="fl">宝马3系|</dd>
+                        <dd class="fl">宝马5系|</dd>
+                        <dd class="fl">雅阁|</dd>
+                        <dd class="fl">奥迪A4L</dd>
+                        <dd class="fl">奔驰S级|</dd>
+                        <dd class="fl">高尔夫|</dd>
+                        <dd class="fl">帕萨特|</dd>
+                        <dd class="fl">宝马X5|</dd>
+                        <dd class="fl">迈腾</dd>
+                    </dl>
+                </div>
             </div>
             <div class="bottom">
                 <a href="#">点击进入二手车之家，查看更多车源 >></a>
             </div>
         </div>
-        <div class="second-hand-b_r fr"></div>
+        <div class="second-hand-b_r fr">
+            <ul>
+                <li class="fl">
+                    <img src="img/sellcar2.jpg" alt="">
+                    <p>特卖价¥32.8万</p>
+                    <p>福特Mustang特价32.8万</p>
+                </li>
+                <li class="fl">
+                    <img src="img/sellcar2.jpg" alt="">
+                    <p>特卖价¥32.8万</p>
+                    <p>福特Mustang特价32.8万</p>
+                </li>
+                <li class="fl">
+                    <img src="img/sellcar2.jpg" alt="">
+                    <p>特卖价¥32.8万</p>
+                    <p>福特Mustang特价32.8万</p>
+                </li>
+                <li class="fl">
+                    <img src="img/sellcar2.jpg" alt="">
+                    <p>特卖价¥32.8万</p>
+                    <p>福特Mustang特价32.8万</p>
+                </li>
+                <li class="fl">
+                    <img src="img/sellcar2.jpg" alt="">
+                    <p>特卖价¥32.8万</p>
+                    <p>福特Mustang特价32.8万</p>
+                </li>
+                <li class="fl">
+                    <img src="img/sellcar2.jpg" alt="">
+                    <p>特卖价¥32.8万</p>
+                    <p>福特Mustang特价32.8万</p>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 <!--E--北京二手车-->
+<!--S-img-7777-->
+<div class="banner6 clearfix">
+    <div class="banner6_l fl"></div>
+    <div class="banner6_r fr"></div>
+</div>
+<!--E-img-7777-->
+<!--中间一部分，重复性-->
+<!--E--footer-->
+<footer>
+
+</footer>
+<!--S--footer-->
 </body>
 <html>
 
