基本完成页面结构

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Caoy">
+    <link rel="icon" href="img/title.png">
     <link rel="stylesheet" href="css/cssReset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/common.css">
@@ -10,103 +11,105 @@
 </head>
 <body>
 <!--S--top-->
-<div class="top">
-    <h1 class="logo" title="汽车之家">
-        汽车之家
-    </h1>
-    <div class="top_1">
-        <div class="top_1_page">
-            <div class="top_1_l fl">
+<header>
+    <div class="top">
+        <h1 class="logo" title="汽车之家">
+            汽车之家
+        </h1>
+        <div class="top_1">
+            <div class="top_1_page">
+                <div class="top_1_l fl">
+                    <ul>
+                        <li class="fl">北京</li>
+                        <li class="fl">切换<s></s></li>
+                        <li class="fl"><s>|</s></li>
+                        <li class="fl">查看其他地方车市</li>
+                    </ul>
+                </div>
+                <div class="top_1_r fr">
+                    <ul>
+                        <li class="fl">您好！请</li>
+                        <li class="fl"><a href="#">登录</a></li>
+                        <li class="fl">或</li>
+                        <li class="fl"><a href="#">注册</a></li>
+                        <li class="fl"><a href="#">找论坛</a></li>
+                        <li class="fl"><i></i>音频</li>
+                        <li class="fl"><i>|</i></li>
+                        <li class="fl">更多应用<i></i></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="top_2">
+            <div class="top_2_page">
                 <ul>
-                    <li class="fl">北京</li>
-                    <li class="fl">切换<s></s></li>
-                    <li class="fl"><s>|</s></li>
-                    <li class="fl">查看其他地方车市</li>
+                    <li class="fl">文章 <i></i></li>
+                    <li class="fl">评测</li>
+                    <li class="fl">优创</li>
+                    <li class="fl">视频 <i></i></li>
+                    <li class="fl">说客</li>
+                    <li class="fl">百科</li>
+                    <li class="fl">车型对比</li>
+                    <li class="fl">图片</li>
+                    <li class="fl">报价</li>
+                    <li class="fl">车商城</li>
+                    <li class="fl">降价</li>
+                    <li class="fl">经销商</li>
+                    <li class="fl">二手车</li>
+                    <li class="fl">论坛</li>
+                    <li class="fl">精选</li>
+                    <li class="fl">口碑</li>
                 </ul>
             </div>
-            <div class="top_1_r fr">
+        </div>
+
+        <div class="top_3">
+            <div class="top_3_page">
                 <ul>
-                    <li class="fl">您好！请</li>
-                    <li class="fl"><a href="#">登录</a></li>
-                    <li class="fl">或</li>
-                    <li class="fl"><a href="#">注册</a></li>
-                    <li class="fl"><a href="#">找论坛</a></li>
-                    <li class="fl"><i></i>音频</li>
-                    <li class="fl"><i>|</i></li>
-                    <li class="fl">更多应用<i></i></li>
+                    <li class="fl">
+                        <i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
+                    <li class="fl"><i></i>
+                        <p>微型车</p>
+                    </li>
                 </ul>
             </div>
         </div>
-    </div>
 
-    <div class="top_2">
-        <div class="top_2_page">
-            <ul>
-                <li class="fl">文章 <i></i></li>
-                <li class="fl">评测</li>
-                <li class="fl">优创</li>
-                <li class="fl">视频 <i></i></li>
-                <li class="fl">说客</li>
-                <li class="fl">百科</li>
-                <li class="fl">车型对比</li>
-                <li class="fl">图片</li>
-                <li class="fl">报价</li>
-                <li class="fl">车商城</li>
-                <li class="fl">降价</li>
-                <li class="fl">经销商</li>
-                <li class="fl">二手车</li>
-                <li class="fl">论坛</li>
-                <li class="fl">精选</li>
-                <li class="fl">口碑</li>
-            </ul>
-        </div>
     </div>
-
-    <div class="top_3">
-        <div class="top_3_page">
-            <ul>
-                <li class="fl">
-                    <i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-                <li class="fl"><i></i>
-                    <p>微型车</p>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-</div>
+</header>
 <!--E--top-->
 <!--S--顶部图-->
 <div class="topImage">
@@ -1733,10 +1736,110 @@
     <div class="banner6_r fr"></div>
 </div>
 <!--E-img-7777-->
-<!--中间一部分，重复性-->
+
+<!--中间一部分，重复性太多-->
+
 <!--E--footer-->
 <footer>
-
+    <div class="top">
+        <div class="title">
+            <span>友情链接</span><span>热门品牌</span>
+        </div>
+        <div class="list1">
+            <dl class="clearfix">
+                <dt class="fl">推荐网站</dt>
+                <dd class="fl">IT168</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">泡泡网</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">二手车之家</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">汽车之家</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">渠道168</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">IT 文库</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">ChinaUnix</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">苹果园</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">泡泡俱乐部</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">IT168产品报价</dd>
+            </dl>
+        </div>
+        <div class="list1">
+            <dl class="clearfix">
+                <dt class="fl">推荐网站</dt>
+                <dd class="fl">IT168</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">泡泡网</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">二手车之家</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">汽车之家</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">渠道168</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">IT 文库</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">ChinaUnix</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">苹果园</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">泡泡俱乐部</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">IT168产品报价</dd>
+            </dl>
+        </div>
+        <div class="list1">
+            <dl class="clearfix">
+                <dt class="fl">推荐网站</dt>
+                <dd class="fl">IT168</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">泡泡网</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">二手车之家</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">汽车之家</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">渠道168</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">IT 文库</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">ChinaUnix</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">苹果园</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">泡泡俱乐部</dd>
+                <dd class="fl">|</dd>
+                <dd class="fl">IT168产品报价</dd>
+            </dl>
+        </div>
+    </div>
+    <div class="bottom">
+        <ul class="clearfix">
+            <li class="fl">关于我们</li>
+            <li class="fl">联系我们</li>
+            <li class="fl">Investor Relations</li>
+            <li class="fl">招贤纳士</li>
+            <li class="fl">iPhone客户端/iPad客户端</li>
+            <li class="fl">Android客户端</li>
+            <li class="fl">WP客户端手机版</li>
+            <li class="fl">汽车之家</li>
+            <li class="fl">意见反馈</li>
+        </ul>
+        <ul class="clearfix">
+            <li class="fl">京公网安备 11010802000104号</li>
+            <li class="fl">|</li>
+            <li class="fl">广播电视节目制作经营许可证（京）字第1125号</li>
+            <li class="fl">|</li>
+            <li class="fl">京ICP备09113703号-1</li>
+            <li class="fl">|</li>
+            <li class="fl">信息网络传播视听节目许可证：0110553</li>
+        </ul>
+    </div>
 </footer>
 <!--S--footer-->
 </body>
